--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <li><a href="#skills">Skills</a></li>
               <li><a href="#contact">Contact</a></li>
               <li>
-                <a href="/CVAmalia.pdf" target="_blank">
+                <a href="/CVAmaliaa.pdf" target="_blank">
                   <button class="btn">CV</button>
                 </a>
               </li>
