--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <li><a href="#skills">Skills</a></li>
               <li><a href="#contact">Contact</a></li>
               <li>
-                <a href="https://drive.google.com/file/d/1vKA_QCmpr0iQVa1hJa6PUS05QZH4NjZA/view?usp=sharing" class="cv-link">
+                <a href="https://drive.google.com/file/d/1vKA_QCmpr0iQVa1hJa6PUS05QZH4NjZA/view?usp=drive_link" class="cv-link">
                   <button class="btn">CV</button>
                 </a>
               </li>
